--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
                             <br>
                             <br>
                             <br>
-                            <a class="abajo" href="https://instagram.com/"><img src="img/ig.png" alt=""></a>
-                            <a class="abajo" href="https://instagram.com/"><img src="img/tumblr.png" alt=""></a>
-                            <a class="abajo" href="https://instagram.com/"><img src="img/behance.png" alt=""></a>
+                            <a class="abajo" href="https://instagram.com/chicoquin"><img src="img/ig.png" alt=""></a>
+                            <a class="abajo" href="https://chicoquin.tumblr.com/"><img src="img/tumblr.png" alt=""></a>
+                            <a class="abajo" href="https://behance.net/chicoquin"><img src="img/behance.png" alt=""></a>
                             <br>
                             <br>
                             <br>
