--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 
                     <!--Contenido específico-->
+                    <!--Esta galería la saqué de aquí https://www.w3schools.com/css/css_image_gallery.asp-->
+                    <!--lo que hace esta galería es linkear foto por foto, respondiendo a los estilos responsive y gallery. Esto se hubiera podido hacer mucho más fácil con Bootstrap y Javascript pero me enteré muy tarde.-->
                     <div id="portafolio">
 
                     <div class="responsive">
@@ -47,7 +49,7 @@
                             <img src="https://www.w3schools.com/css/img_lights.jpg" alt="Mountains" width="600" height="400">
                         </div>
                     </div>
-                          
+                     <!--estos divs vacíos son para acomodar el contenido y que este no se desarme-->     
                           <div class="clearfix"></div>
                           
                           <div style="padding:6px;">
@@ -64,9 +66,9 @@
                             <br>
                             <br>
                             <br>
-                            <a class="abajo" href="https://instagram.com/"><img src="img/ig.png" alt=""></a>
-                            <a class="abajo" href="https://instagram.com/"><img src="img/tumblr.png" alt=""></a>
-                            <a class="abajo" href="https://instagram.com/"><img src="img/behance.png" alt=""></a>
+                            <a class="abajo" href="https://instagram.com/chicoquin"><img src="img/ig.png" alt=""></a>
+                            <a class="abajo" href="https://chicoquin.tumblr.com/"><img src="img/tumblr.png" alt=""></a>
+                            <a class="abajo" href="https://behance.net/chicoquin"><img src="img/behance.png" alt=""></a>
                             <br>
                             <br>
                             <br>
