--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                     <!--Contenido específico-->
                  <div id="contenedor">
                     <div id="izquierda">
-                        <a class="foto"><img src="https://media.metrolatam.com/2019/10/01/gettyimages11784-21aa3f3bc667e3b9b5682201ca3495ff-600x400.jpg"></a>
+                        <a class="foto"><img src="img/yo.jpg"></a>
                     </div>
 
                     <div id="derecha">
