--- a/contacto.html
+++ b/contacto.html
@@ -14,9 +14,9 @@
 
     <ul>
         <!--la class active es para que la barra de navegación indique en qué sección de la página estamos-->
-        <li><a class="active" href="contacto.html">Contacto</a></li>
-        <li><a href="about.html">Sobre mí</a></li>
-        <li><a href="index.html">Portafolio</a></li>
+        <li><a class="active" href="contacto.html">CONTACTO</a></li>
+        <li><a href="about.html">SOBRE MI</a></li>
+        <li><a href="index.html">PORTAFOLIO</a></li>
 
     </ul>
 
@@ -31,20 +31,20 @@
             <label id="nombre-c" class="semibold" for="nombre">NOMBRE</label>
             <label id="correo-c" class="semibold" style="padding-left:30.8%;" for="mail">CORREO</label>
             <br> <!--br son saltos de línea-->
-            <input type="text" id="name" name="nombre" style="width:35%;" placeholder="Escribe tu nombre...">
-            <input type="text" id="correo" name="correo" style="width:35%;" placeholder="Escribe tu correo...">
+            <input type="text" id="name" name="nombre" style="width:35%;">
+            <input type="text" id="correo" name="correo" style="width:35%;">
        
             <br>
             <!-- los id son para elemento ÚNICOS E IRREPETIBLES, las clases para varios elementos que puedan tener los mismo estilos-->
-            <label id="telefono-c" class="semibold" for="telefono">TELÉFONO</label>
+            <label id="telefono-c" class="semibold" >TELÉFONO</label>
             <br>
-            <input type="text" id="telefono" name="telefono" placeholder="Escribe tu teléfono...">
+            <input type="text" id="telefono" name="telefono" placeholder="">
             <br>
 
 
             <label id="mensaje-c" class="semibold" for="mensaje">MENSAJE</label>
             <br>
-            <textarea id="mensaje" name="mensaje" placeholder="Escribe tu mensaje..." style="height:100px"></textarea>
+            <textarea id="mensaje" name="mensaje" placeholder="" style="height:100px"></textarea>
             <br>
             <input type="submit" value="ENVIAR">
         </form>
