--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
                     <a id="logo" href="index.html"><img src="img/logo.png"></img></a></li>
               
                     <ul>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a class="active" href="about.html">Sobre mí</a></li>
-                        <li><a href="index.html">Portafolio</a></li>
+                        <li><a href="contacto.html">CONTACTO</a></li>
+                        <li><a class="active" href="about.html">SOBRE MI</a></li>
+                        <li><a href="index.html">PORTAFOLIO</a></li>
                         
                     </ul>
 
