--- a/contacto.html
+++ b/contacto.html
@@ -14,6 +14,7 @@
 
     <ul>
         <!--la class active es para que la barra de navegación indique en qué sección de la página estamos-->
+        <!--li href es para ir a buscar la referencia. Es conveniente sólo poner href(s) en etiquetas a. El href puede ser un link o un archivo.-->
         <li><a class="active" href="contacto.html">CONTACTO</a></li>
         <li><a href="about.html">SOBRE MI</a></li>
         <li><a href="index.html">PORTAFOLIO</a></li>
