--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+<div id="navbar">
     <a id="logo" href="index.html"><img src="img/logo.png"></img></a></li>
     <!--'ul' es 'unordered list', que puede contener elementos de lista 'li'-->
 
@@ -20,6 +20,7 @@
         <li><a href="index.html">PORTAFOLIO</a></li>
 
     </ul>
+</div>
 
     <!--Contenido específico-->
     <!--Los contenedores son para contener (obvio), lo que sigue. Sirven para estrcuturar el contenido dentro de "cajas".-->
