--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="container">
+    <div id="navbar">
 
         <a id="logo" href="index.html"><img src="img/logo.png"></img></a></li>
 
